<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="shoujihao">13166398575</string>
    <string name="yanzhengma">2254</string>
    <string name="app_name">OZNER IFAMILY</string>
    <string name="ozner_copyright">COPYRIGHT©2015 OZNER.ALL RIGHTS RESERVED</string>
    <string name="Baidu_Push_ApiKey">0si8AI4XyFKDbK7dWGIZG424</string>
    <string name="navigation_drawer_open">Open the sidebar</string>
    <string name="navigation_drawer_close">Close the sidebar</string>
    <string name="settings">Settings</string>
    <string name="PressToExit">Press again to exit</string>
    <string name="times">times</string>
    <string name="no_more_messages">No more messages</string>
    <string name="device">Device</string>
    <string name="eshop">Mall</string>
    <string name="chat">Chat</string>
    <string name="mine">Me</string>
    <string name="ozner_eshop">Ozner Mall</string>
    <string name="exception_tips">Exception</string>
    <string name="err_net_outline">Network interruption, please check your network status</string>
    <string name="not_obtain_version">Did not get to the version information</string>
    <string name="err_miss_phone">Please enter the right phone number</string>
    <string name="err_miss_verify_code">Please enter the verification code</string>
    <string name="err_miss_proctol">Please agree "OZNER IFAMILY Disclaimer"</string>
    <string name="bd_bind_fail">Fail to bind baidu push service</string>
    <string name="device_address_err">Device address wrong</string>
    <string name="Filter_Scan">Scan</string>
    <string name="scan_text">Put QR code into the box to scan</string>
    <string name="not_connect_Wifi">Not connected wi-fi</string>
    <string name="login_phone_hint">Phone number</string>
    <string name="input_userphone">Please enter the right phone number</string>
    <string name="login_code_hint">Captcha</string>
    <string name="input_verifycode">Please enter the verification code</string>
    <string name="get_verify_code">Obtain captcha</string>
    <string name="login">Login</string>
    <string name="get_voice_code">To obtain voice captcha</string>
    <string name="agree_proctol">Agreed to </string>
    <string name="ozner_proctol">OZNER IFAMILY Clauses</string>
    <string name="login_no_code">Fail to receive captcha by text message?</string>
    <string name="login_btn_voi">To obtain voice captcha</string>
    <string name="verify_code_requesting">Obtaining verification code...</string>
    <string name="logining">logging in...</string>
    <string name="tips_getcode">The captcha will sent out in text message,please keep an eye on check.</string>
    <string name="tips_getvoice">You will receive 400 calls from voice, please note answer</string>
    <string name="sign_out_tip">Tips</string>
    <string name="login_on_other_device">Other devices in your account login, please sign in again.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reset">Reset</string>
    <string name="resetpassword">Reset password</string>
    <string name="sign_up">Sing up</string>
    <string name="input_email">Please input your email</string>
    <string name="input_password">Please enter your password</string>
    <string name="valid_email">Email address format is not correct</string>
    <string name="verify_code">Captcha</string>
    <string name="newpassword">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sendingEmailCode">Sending...</string>
    <string name="fail_to_get_code">Fail to send captcha</string>
    <string name="different_pwd">The new password is inconsistent</string>
    <string name="reset_pwd_success">Reset success,please login again</string>
    <string name="regSucc">Registered successfully</string>
    <string name="current_filter_state">Filter status</string>
    <string name="filter_tips">Reminder: the timely replacement of the filter in order to ensure the safety of drinking water</string>
    <string name="left_replace_filter">Left time</string>
    <string name="scancode">Scan QR code</string>
    <string name="scancode_text">Scan QR code on the package,and activate the APP to launch the reset of filter cartridge</string>
    <string name="more_products">More products</string>
    <string name="relieved_service">Ozner Confidence Service</string>
    <string name="Filter_Project1">Smart Water Probe</string>
    <string name="Filter_Project2">Golden Novowater</string>
    <string name="Filter_Project3">OZNER Cup</string>
    <string name="Filter_Service_up_00">365 days filter life</string>
    <string name="Filter_Service_up_01">Door replacement every year</string>
    <string name="Filter_Service_up_10">10 Smart</string>
    <string name="Filter_Service_up_11">Home repair machine</string>
    <string name="Filter_Service_up_20">Security without water</string>
    <string name="Filter_Service_up_21">24 hours customer service consulting</string>
    <string name="Filter_Service_up_30">Regular water quality monitoring</string>
    <string name="Filter_Service_up_31">Products Intelligent Software Upgrade</string>
    <string name="Filter_Service_down_00">Monitoring and early warning</string>
    <string name="Filter_Service_down_01">A standard filter material</string>
    <string name="Filter_Service_down_10">Safe water service</string>
    <string name="Filter_Service_down_11">Parts Replacement Service</string>
    <string name="Filter_Service_down_20">Replace the filter reminder</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="device_connecting">In connecting</string>
    <string name="device_unconnected">Not connected</string>
    <string name="disconnect">Disconnected</string>
    <string name="air_disconnect">No</string>
    <string name="add_device">Add device</string>
    <string name="nodevice_add_device">Please add device</string>
    <string name="start_ozner_smart">Start OZNER smart life</string>
    <string name="match_device">Device pair</string>
    <string name="add_newDevice">Add new device</string>
    <string name="select_ozner_device">Select smart device</string>
    <string name="ozner_smart_service">OZNER intelligent life services</string>
    <string name="start_smart_service">Immediately add equipment and begin to experience the OZNER intelligent life service.</string>
    <string name="device_name">Device name</string>
    <string name="use_position">Place</string>
    <string name="smart_glass">Ozner Cup</string>
    <string name="water_probe">Water Tester</string>
    <string name="water_purifier">Water purifier</string>
    <string name="water_purifier_ro">Water purifier</string>
    <string name="water_tdspen">TDS pen</string>
    <string name="air_purifier">Air purifier</string>
    <string name="air_purifier_ver">Air purifier\n(Vertical)</string>
    <string name="air_purifier_desk">Air purifier\n(Desktop)</string>
    <string name="water_replen_meter">Smart water meter</string>
    <string name="bluetooth_connection"> </string>
    <string name="wifi_connection"> </string>
    <string name="blue_need_pos">Bluetooth pairing need location permissions</string>
    <string name="open_camera_permission">No camera permission</string>
    <string name="replen_match_tips">Press the key to open 5 seconds, blue lights flashing</string>
    <string name="rember_password">Remember  password</string>
    <string name="match_notice_tap">Press the start button for 3S</string>
    <string name="matching_bluetooth">Bluetooth pairing</string>
    <string name="found_device">Device searched</string>
    <string name="rematch">Try again</string>
    <string name="match_successed">Pairing successful</string>
    <string name="match_failed">Pair timeout</string>
    <string name="common_problem">FAQ</string>
    <string name="problem_notice_tap">Check the battery,Bluetooth status and then try to match</string>
    <string name="problem_notice_replen">You can check the water meter Bluetooth enabled before pairing</string>
    <string name="input_tap_name">Enter the name of water tester</string>
    <string name="input_tdspen_name">Enter TDS pen name</string>
    <string name="input_weight">Enter the weight</string>
    <string name="beat_users">Beat the %1$d%% of users</string>
    <string name="reverse_cup">Inverse Ozner Cup</string>
    <string name="input_cup_name">Cup\'s name</string>
    <string name="input_air_name">Enter the name of the water purifier</string>
    <string name="input_replen_name">Enter the name of moisturizing device</string>
    <string name="select_gender_tips">Please select your gender</string>
    <string name="man">Male</string>
    <string name="women">Female</string>
    <string name="secrecy">secrecy</string>
    <string name="gender">Gender</string>
    <string name="time_to_moisturizing">Hydrating time</string>
    <string name="replen_remind">Replenishment reminders</string>
    <string name="replen_remind_time">Replenishment reminder time</string>
    <string name="replen_tips">Recommendation water 2 to 3 times a day</string>
    <string name="replen_use_replen_tips">Stick with the essence of water, can effectively improve the skin condition.</string>
    <string name="replen_use_des">Water meter for use</string>
    <string name="replen_low_power_setting_tips">When the power is less than 15%, APP will prompt!</string>
    <string name="office">Office</string>
    <string name="finish">OK</string>
    <string name="no_success">Failure</string>
    <string name="device_disConnect">Disconnected</string>
    <string name="not_support">Not Supported</string>
    <string name="connect_wlan">Connect WLAN</string>
    <string name="inpu_water_name">Enter the name of the water purifier</string>
    <string name="replen_water_introduce" formatted="false">Eye\t35%-45%\nFace\t32%-42%\nNeck\t35%-45%\nHand\t32%-38%\n(for reference only)</string>
    <string name="replen_water_season_tip">Different seasons each part of the water value will vary.</string>
    <string name="replen_water_season_tip_value" formatted="false">Normal summer water rate difference 3%, winter normal water rate difference 5%.</string>
    <string name="replen_water_introduce_title">Human body parts normal water rate</string>
    <string name="replen_buy_essence">Buy essence</string>
    <string name="save">Save</string>
    <string name="delete_this_device">Delete the device</string>
    <string name="voc_introduce_title">Volatile Organic Compounds</string>
    <string name="voc_introduce_sub_title">Volatile Organic Comounds,Abbr:VOC</string>
    <string name="voc_introduce_content">\t\tAt room temperature usually refers to volatile organic compounds. More common as benzene, toluene, xylene, ethylbenzene, styrene, formaldehyde, TVOC (6-16 carbons alkanes), ketones and the like. These compounds have a volatile and pro-oil, it is widely used in industrial fields of footwear, toys, paints and graphite, adhesives, cosmetics, cars and interior decoration materials. VOC has a huge impact on human health, harm the liver, kidneys, brain and nervous system, causing memory loss and other serious consequences, and may even cause cancer.</string>
    <string name="unit">Measurement unit</string>
    <string name="Center_Temp">Temperature</string>
    <string name="Center_Volumn">Water</string>
    <string name="Center_Centigrade">Degree centigrade</string>
    <string name="Center_Centigrade_Unit">(℃)</string>
    <string name="Center_Fahrenheit">Fahrenheit degree</string>
    <string name="Center_fahrenheit_Unit">(℉)</string>
    <string name="Center_ML">ML</string>
    <string name="Center_ML_Unit">(ML)</string>
    <string name="Center_DL">DL</string>
    <string name="Center_DL_Unit">(DL)</string>
    <string name="Center_OZ">OZ</string>
    <string name="Center_OZ_Unit">(OZ)</string>
</resources>