<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_replen_water_introduce"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.ozner.cup.Device.ReplenWater.ReplenWaterIntroduceActivity">

    <include layout="@layout/toolbar"/>
    <TextView
        android:layout_marginTop="15dp"
        android:textSize="16dp"
        android:text="@string/replen_water_introduce_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="8dp"
        android:textSize="16dp"
        android:textColor="@color/faq_text_blue"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="8dp"
        android:text="@string/replen_water_introduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:textSize="16dp"
        android:text="@string/replen_water_season_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textSize="16dp"
        android:text="@string/replen_water_season_tip_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
