<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_set_up_replen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_bg"
    tools:context="com.ozner.cup.Device.ReplenWater.SetUpReplenActivity">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        style="@style/item_click_ripple"
        android:id="@+id/rlay_device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/water_replen_meter"
            android:textColor="@color/light_black"/>

        <ImageView
            android:id="@+id/iv_name_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/right_gray"/>

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/iv_name_right"
            android:text="智能补水仪(办公室)"/>
    </RelativeLayout>

    <TextView
        android:background="@color/colorLine"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <RelativeLayout
        style="@style/item_click_ripple"
        android:id="@+id/rlay_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/gender"
            android:textColor="@color/light_black"/>

        <ImageView
            android:id="@+id/gender_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/right_gray"/>

        <TextView
            android:textSize="14dp"
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/gender_right"
            android:text="女"/>
    </RelativeLayout>

    <TextView
        android:textSize="12dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/replen_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        style="@style/item_click_ripple"
        android:id="@+id/rlay_replen_remind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/replen_remind_time"
            android:textColor="@color/light_black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/right_gray"/>
    </RelativeLayout>



    <TextView
        android:drawableLeft="@drawable/icon_attention"
        android:textSize="12dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/replen_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <RelativeLayout
        style="@style/item_click_ripple"
        android:id="@+id/rlay_buy_essence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/replen_buy_essence"
            android:textColor="@color/light_black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/right_gray"/>
    </RelativeLayout>

    <TextView
        android:drawableLeft="@drawable/icon_attention"
        android:textSize="12dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/replen_use_replen_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        style="@style/item_click_ripple"
        android:id="@+id/rlay_about_replen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/replen_use_des"
            android:textColor="@color/light_black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/right_gray"/>
    </RelativeLayout>

    <TextView
        android:drawableLeft="@drawable/icon_attention"
        android:textSize="12dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/replen_low_power_setting_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_delete_device"
        android:layout_width="230dp"
        android:layout_height="38dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/del_btn_stroke"
        android:gravity="center"
        android:text="@string/delete_this_device"
        android:textColor="@color/err_red"/>
</LinearLayout>
